--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.ts --exec ts-node"
+    "start:dev": "nodemon --config nodemon.json"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +23,10 @@
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
   }
 }
